# PlatformIO

IDF/: Temario.txt
IDF/Clase_10_ESPLOG/: CMakeLists.txt
IDF/Clase_1_Introduccion_IDF/: CMakeLists.txt
IDF/Clase_2_GPIO_Entradas_Digitales/: CMakeLists.txt
IDF/Clase_3_Salidas_Digitales/: CMakeLists.txt
IDF/Clase_3_Tarea_1/: CMakeLists.txt  DescripcionTarea.txt
IDF/Clase_4_Logica_Condicional_Estructuras_De_Control/: CMakeLists.txt  DescripcionEjemplo.txt
IDF/Clase_4_Tarea_1/: CMakeLists.txt  DescripcionTarea.txt
IDF/Clase_5_Bucles_Temporizadores/: CMakeLists.txt
IDF/Clase_5_Tarea_1/: CMakeLists.txt  DescripcionTarea.txt
IDF/Clase_6_PWM/: CMakeLists.txt
IDF/Clase_6_Tarea_1/: CMakeLists.txt  DescriptcionTarea.txt
IDF/Clase_6_Tarea_2/: CMakeLists.txt  DescripcionTarea.txt
IDF/Clase_7_ADC/: CMakeLists.txt
IDF/Clase_7_ADC_One-Shot/: CMakeLists.txt  platformio.ini
IDF/Clase_7_Tarea_1/: CMakeLists.txt  DescripcionTarea.txt
IDF/Clase_8_Comunicacion_UART/: CMakeLists.txt
IDF/Clase_8_GPIO_CONF/: CMakeLists.txt
IDF/Clase_9_I2C/: CMakeLists.txt
IDF/Display_7Seg/: CMakeLists.txt
IDF/Driver_LD298N/: CMakeLists.txt
IDF/RGB_IDF/: CMakeLists.txt
IDF/SH1106_Test/: CMakeLists.txt  idf_component.yml  platformio.ini  sdkconfig.esp32doit-devkit-v1
IDF/SH1106_Test/src/: CMakeLists.txt
IDF/SSD1306_IDF/: CMakeLists.txt  platformio.ini
IDF/Servo_Pot/: CMakeLists.txt
IDF/TMC_2209/: CMakeLists.txt
IDF/WIFI_Grok/: CMakeLists.txt
IDF/WaterLevel/: CMakeLists.txt
IDF/oled_test/: CMakeLists.txt  platformio.ini
Projects/: platformio.ini
(+455 files in other folders)
